# ontology_chat

./: .claude_rules  .coverage  .env.monitoring  .gitignore  ACTUAL_STATUS_CONFIRMED.md  ADVANCED_CONTEXT_ENGINEERING_COMPLETE.md  ADVANCED_PROMPT_STRATEGY.md  AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_READINESS_ASSESSMENT.md  COMPLEX_QUERY_IMPROVEMENT_REPORT.md  CONTRIBUTING.md  CORRECTED_PERFORMANCE_ANALYSIS.md  CORRECTED_SCHEMA_STATUS.md  DOCKER.md  DUAL_MODEL_ARCHITECTURE.md  Dockerfile.api  Dockerfile.api.prod  Dockerfile.ui  Dockerfile.ui.prod  FINAL_DIAGNOSIS.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_SCHEMA_VERIFICATION.md  FINAL_VALIDATION_REPORT.md  GEMMA3_4B_EVALUATION_RESULTS.md  HIGH_QUALITY_REPORT_IMPLEMENTATION.md  HIGH_QUALITY_REPORT_WORKFLOW.md  HYBRID_QUALITY_IMPROVEMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MONITORING.md  Makefile  NEO4J_ISSUE_RESOLVED.md  NEO4J_OPTIMIZATION_APPLIED.md  NEO4J_OPTIMIZATION_REPORT.md  OPTIMIZATION_RESULTS.md  P0_FIXES_COMPLETE.md  PERFORMANCE_ANALYSIS.md  (+101 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  cd.yml  ci.yml  nightly.yml  quality-gate.yml
api/: cli.py  config.py  logging.py  main.py
api/adapters/: llm_openai.py  mcp_neo4j.py  mcp_opensearch.py  mcp_rdb.py  mcp_stock.py  ollama_embedding.py
api/cache/: __init__.py  cache_decorators.py  cache_strategies.py  multi_level_cache.py
api/config/: __init__.py  graph_search.cypher  graph_search.cypher.backup  keyword_mappings.py  updated_graph_search.cypher
api/graph/: pipeline.py
api/mcp/: base.py  router.py  tools.py
api/monitoring/: __init__.py  metrics.py  metrics_collector.py  middleware.py
api/neo4j_scheme/: neo4j_query_examples.md  neo4j_schema_documentation.md  neo4j_schema_mapping.json
api/prompts/: style.kr.md  system.kr.md  user.kr.md
api/routers/: analytics_router.py  cache_management_router.py  cache_router.py  health.py  health_router.py  metrics_router.py  monitoring_router.py
api/services/: cache_manager.py  cached_chat_service.py  chat_service.py  context_answer_generator.py  context_cache.py  context_diversity.py  context_insight_generator.py  context_pruning.py  cypher_builder.py  enhanced_chat_service.py  error_handler.py  formatters.py  intent_classifier.py  langgraph_report_service.py  news_handler.py  personalization.py  prompting.py  query_router.py  report_service.py  response_formatter.py  search_strategy.py  semantic_similarity.py  stock_analysis_handler.py  stock_data_service.py  updated_report_service.py
api/utils/: __init__.py  circuit_breaker.py  graceful_degradation.py  langfuse_tracer.py  llm_keyword_extractor.py  llm_keyword_extractor_simple.py  retry_handler.py  text_analyzer.py
dashboard/: performance_dashboard.py
debug/: debug_answer_generation.py  debug_circuit_breaker.py  debug_vector_search.py
docs/: CODING_STANDARDS.md  HYBRID_ROUTING_ARCHITECTURE.md  HYBRID_ROUTING_TEST_RESULTS.md
monitoring/: prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy.sh  start-dashboard.sh  start-monitoring-dev.sh  start-monitoring-prod.sh  start-monitoring.sh
tests/: README.md  __init__.py  conftest_minimal.py  run_tests.sh  test_hybrid_routing.py  test_simple.py
tests/analysis/: __init__.py  test_comparative_reports.py
tests/experimental/: __init__.py  test_diversity_issue.py  test_keywords_only.py  test_simulated_query.py
ui/: components.py  enhanced_components.py  main.py
(+33 files in other folders)
